# visual_control_demo_group2

./: README.md
src/: launch.sh
src/button_mode_switcher/: CMakeLists.txt  package.xml
src/button_mode_switcher/launch/: button.launch
src/button_mode_switcher/src/: buttonClass.py  button_node.py  ledClass.py  main.py
src/coordinator/: CMakeLists.txt  package.xml
src/coordinator/launch/: coordinator.launch  everything.launch
src/coordinator/msg/: CurrentMode.msg  GoToMode.msg  NextMode.msg
src/coordinator/src/: coordinator_node.py
src/display_module/: CMakeLists.txt  package.xml
src/display_module/launch/: display.launch
src/display_module/src/: show_stats_node.py
src/jetson_camera/: CMakeLists.txt  package.xml
src/jetson_camera/launch/: assignment2_1.launch  ocr_node.launch  undistort.launch
src/jetson_camera/msg/: DualImages.msg
src/jetson_camera/src/: calibrate.py  camera_publisher_node.py  camera_subscriber_node.py  dual_images_subscriber_node.py  image_processing_node.py  ocr_node.py  qr_scanner_node.py
src/lane_detection/: CMakeLists.txt  package.xml
src/lane_detection/launch/: assignment3_2.launch  final_assignment_local.launch  lane_follower.launch
src/lane_detection/src/: lane_detection_node.py  lane_follower_node.py
src/lane_detection/tools/: create_xy_map_image.py  ros_image_saver.py
src/motor_api/: CMakeLists.txt  package.xml
src/motor_api/launch/: motor_encoder.launch  motor_node.launch
src/motor_api/msg/: MotorCommand.msg  MotorCommandStatus.msg
src/motor_api/src/: .motor_api_node.py.swp  motorDriver.py  motor_api_node.py  motor_encoder_node.py
src/paul_alarm/: CMakeLists.txt  package.xml
src/paul_alarm/launch/: alarm.launch  monitor.launch  paul_everything.launch
src/paul_alarm/msg/: DualImage.msg
src/paul_alarm/src/: alarm_controller.py.bak  alarm_omni.py  dual_image_subscriber_node.py  image_processing_node_paul.py  motion_detector.py.bak
src/people_count/: CMakeLists.txt  package.xml
src/people_count/config/: parameters.yaml
src/people_count/launch/: people_count.launch
src/people_count/msg/: DualImages.msg
src/people_count/src/: dual_images_subscriber_node_alex.py
src/qr_switch/: CMakeLists.txt  package.xml
src/qr_switch/src/: scanner_node.py
