<?xml version="1.0"?>
<package format="2">
    <name>display_module</name>
    <version>0.1.0</version>
    <description>Robot display module for OCR text and system information display</description>

    <!-- Maintainership Information -->
    <maintainer email="c.li@student.tue.nl">Chengqi Li</maintainer>
    <license>MIT</license>

    <!-- ROS dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- Build dependencies -->
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>

    <!-- Runtime dependencies -->
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>

    <!-- Export -->
    <export>
    </export>
</package>
